apps/uptime-monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-monitor
  namespace: uptime-monitor
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8000"
  labels:
    app.kubernetes.io/name: uptime-monitor
    app.kubernetes.io/part-of: workload-2
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: uptime-monitor-api
  ports:
    - name: http
      port: 80
      targetPort: http
