apps/uptime-monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-monitor
  namespace: uptime-monitor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: uptime-monitor.api-api-api.com
    external-dns.alpha.kubernetes.io/target: 2a00:1e20:11:818:be24:11ff:fe00:edb8
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - uptime-monitor.api-api-api.com
      secretName: uptime-monitor-tls
  rules:
    - host: uptime-monitor.api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-monitor
                port:
                  name: http
